# yandex-shad-algo-template

./: README.md  cookiecutter.json
task{{ cookiecutter.__project_slug }}/: CMakeLists.txt  make_result_cpp.py
task{{ cookiecutter.__project_slug }}/src/: main.cpp  {{ cookiecutter.__task_name }}.cpp  {{ cookiecutter.__task_name }}.h
task{{ cookiecutter.__project_slug }}/src/tests/: {{ cookiecutter.__task_name }}_unittest.cpp
task{{ cookiecutter.project_slug }}/: .gitignore  CMakeLists.txt  README.md  make_result_cpp.py
task{{ cookiecutter.project_slug }}/src/: main.cpp  {{ cookiecutter.task_name }}.cpp
task{{ cookiecutter.project_slug }}/src/tests/: {{ cookiecutter.task_name }}_unittest.cpp
